--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "luxon": "^3.3.0",
     "telegraf": "^4.12.2"
   },
   "name": "kontr",
   "version": "1.0.0",
   "main": "bot.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
